--- a/app/site/blueprints/term.yml
+++ b/app/site/blueprints/term.yml
@@ -9,7 +9,7 @@ fields:
     label: Title
     type: text
 
-  section_details:
+  section_meta:
     label: Event Details
     type: headline
   date:
@@ -31,7 +31,6 @@ fields:
     label: Ticketing Link
     type: url
 
-
   section_index:
     label: Index Options
     type: headline
@@ -43,3 +42,58 @@ fields:
       works_sample: Work Sample Thumbnail
     help: >
       Which image will show on page load? The other image will show on hover.
+
+  # Hero
+  section_hero:
+    label: Hero Section
+    type: headline
+  hero:
+    label: Hero Image
+    type: image
+
+  # Details
+  section_details:
+    label: Details Section
+    type: headline
+  what:
+    label: What
+    type: textarea
+    width: 1/3
+  when:
+    label: When
+    type: textarea
+    width: 1/3
+  where:
+    label: Where
+    type: textarea
+    width: 1/3
+
+  # About
+  section_about:
+    label: About Section
+    type: headline
+  about:
+    label: Statement
+    type: textarea
+    help: >
+      A place to write a little about what Fresh is and a statement about this term's theme.
+
+  # Sponsors
+  section_sponsors:
+    label: Sponsors Section
+    type: headline
+  sponsors:
+    label: Sponsor
+    type: structure
+    style: table
+    fields:
+      name:
+        label: Name
+        type: text
+      logo:
+        label: Logo
+        type: image
+      link:
+        label: URL
+        type: url
+
