--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "watchify": "^3.10.0"
   },
   "dependencies": {
-    "jquery": "^2.1.4"
+    "jquery": "^2.1.4",
+    "lodash": "^4.17.11"
   },
   "scripts": {
     "dev": "npm-run-all --parallel styles:watch scripts:watch",
