--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "watchify": "^3.10.0"
   },
   "dependencies": {
+    "between.js": "^0.1.2-fix.2",
     "jquery": "^2.1.4",
     "lodash": "^4.17.11"
   },
