Adding PSU GD logo to archive page

--- a/app/site/blueprints/archive.yml
+++ b/app/site/blueprints/archive.yml
@@ -3,9 +3,15 @@ pages:
   template:
     - year
   sort: title desc
-files: false
+files: true
 icon: address-book
 fields:
   title:
     label: Title
     type: text
+  description:
+    label: Description
+    type: textarea
+  psugd_logo:
+    label: Logo
+    type: image
