--- a/app/site/blueprints/term.yml
+++ b/app/site/blueprints/term.yml
@@ -30,9 +30,9 @@ fields:
     format: 12
     interval: 30
     width: 1/3
-  location:
-    label: Location
-    type: map
+  directions:
+    label: Directions Link
+    type: url
 
   # Main Nav
 
