Adding favicon to cms

--- a/app/site/blueprints/site.yml
+++ b/app/site/blueprints/site.yml
@@ -48,6 +48,9 @@ fields:
   meta_analytics_id:
     label: Google Analytics Tracking ID
     type: text
+  meta_favicon:
+    label: Favicon
+    type: image
 
   # Footer
   section_footer:
